--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=rootuser
-spring.data.mongodb.password=rootpass
+spring.data.mongodb.uri=mongodb+srv://app:apppassword@cluster0.dpji2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 spring.data.mongodb.database=pokemon
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
 spring.data.mongodb.auto-index-creation=true
-
-
-
